carbon/k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: vibecarbon-app
    component: application
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: vibecarbon-app
